ECO-874: Updates crate versions to 0.7.0

--- a/contracts/counter-call/Cargo.toml
+++ b/contracts/counter-call/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-contract-ffi = { package = "casperlabs-contract-ffi", version = "0.20.0" }
+contract = { package = "casper-contract", version = "0.7.0" }
+types = { package = "casper-types", version = "0.7.0" }
