Add tests v1. Add Github Actions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,9 @@
 
 members = [
     "contracts/counter-call",
-    "contracts/counter-define"
+    "contracts/counter-define",
+    "tests"
 ]
+
+[profile.release]
+lto = true 
