added missing error handling

--- a/counter-as/counter-define/package.json
+++ b/counter-as/counter-define/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "asbuild:optimized": "asc assembly/index.ts -b dist/counter-define.wasm --validate --optimize --use abort=",
+    "asbuild:optimized": "asc assembly/index.ts -b dist/counter-define.wasm -t dist/counter-define.wat --validate --optimize --use abort=",
     "asbuild": "npm run asbuild:optimized",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
