--- a/.github/workflows/nightly-scheduled-test.yml
+++ b/.github/workflows/nightly-scheduled-test.yml
@@ -8,7 +8,7 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  nightly-cargo-test:
+  nightly-make-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
