--- a/contracts/counter-call/Cargo.toml
+++ b/contracts/counter-call/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
 edition = "2021"
 
 [dependencies]
-casper-contract = "1.4.4"
-casper-types = "1.5.0"
+casper-contract = "=1.4.4"
+casper-types = "=1.5.0"
 
 [[bin]]
 name = "counter-call"
