--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
 edition = "2021"
 
 [dev-dependencies]
-casper-engine-test-support = { version = "=2.1.0", features = ["test-support"] }
-casper-execution-engine = "=1.5.0"
-casper-types = "=1.5.0"
+casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
+casper-execution-engine = "2.0.0"
+casper-types = "1.5.0"
 
 [[bin]]
 name = "integration-tests"
