--- a/counter-call/Cargo.toml
+++ b/counter-call/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "counter-call"
 version = "1.0.0"
-authors = ["Maciej Zielinski <maciej@casperlabs.io>"]
+authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
 edition = "2021"
 
 [dependencies]
