--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -18,13 +18,13 @@ jobs:
         os: [ubuntu-20.04, ubuntu-22.04]
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           components: rustfmt, clippy
-          toolchain: nightly-2023-03-25
       # Needed for gcc install
+      - run: sudo apt update && sudo apt install -y build-essential
       - run: make prepare
       - run: make check-lint
       - run: make test
