Aligning project to work with 2.x node changes

--- a/counter-call/Cargo.toml
+++ b/counter-call/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "counter-call"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
 edition = "2021"
 
 [dependencies]
-casper-contract = "3.0.0"
-casper-types = "3.0.0"
+casper-contract = "5.0.0"
+casper-types = "6.0.0"
+#base64ct dependency lock should be removed once we use a rust-toolchain compliant with edition2024
+base64ct = "=1.7.2"
 
 [[bin]]
 name = "counter-call"
