--- a/contract-v1/Cargo.toml
+++ b/contract-v1/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
 name = "counter-v1"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
 edition = "2021"
-
-[dependencies]
-casper-contract = "3.0.0"
-casper-types = "3.0.0"
+resolver = "2"
 
 [[bin]]
 name = "counter-v1"
@@ -15,4 +12,8 @@ bench = false
 doctest = false
 test = false
 
-[profile.release] #reduces Wasm size
+[dependencies]
+casper-contract = "5.0.0"
+casper-types = "6.0.0"
+#base64ct dependency lock should be removed once we use a rust-toolchain compliant with edition2024
+base64ct = "=1.7.2"
