Updating 'authors' section in toml files

--- a/contract-v2/Cargo.toml
+++ b/contract-v2/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "counter-v2"
 version = "2.0.0"
+authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
 edition = "2021"
 resolver = "2"
 
