--- a/contract-v1/Cargo.toml
+++ b/contract-v1/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "counter-v1"
 version = "2.0.0"
-authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
+authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
 edition = "2021"
 resolver = "2"
 
