--- a/contract-v3/Cargo.toml
+++ b/contract-v3/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "counter-v3"
 version = "2.0.0"
+authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
 edition = "2021"
 
 [dependencies]
