--- a/counter-call/Cargo.toml
+++ b/counter-call/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "counter-call"
 version = "2.0.0"
-authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
+authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
 edition = "2021"
 
 [dependencies]
