--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tests"
 version = "2.0.0"
-authors = ["CasperAssociation <https://discord.com/invite/Q38s3Vh>"]
+authors = ["CasperAssociation <https://t.me/CSPRDevelopers>"]
 edition = "2021"
 
 [dependencies]
